# thor_arm_description

./: CMakeLists.txt  README.md  package.xml
meshes/: art1.stl  art2.stl  art3.stl  art4.stl  art5.stl  art6.stl  base.stl
urdf/: thor_robot.urdf
